# Mandelbrot-server

./: .gitmodules  CMakeLists.txt  Mandelbrot.cpp  Mandelbrot.h  main.cpp  mandelbrot.json  mandelbrot2.json
